Fix bug where checkmark was visible inside text input field

--- a/packages/forms/src/components/ui/checkbox/Checkbox.module.css
+++ b/packages/forms/src/components/ui/checkbox/Checkbox.module.css
@@ -38,6 +38,7 @@
   transition: background var(--swui-checkbox-animation-time),
     border-color var(--swui-checkbox-animation-time),
     box-shadow var(--swui-checkbox-animation-time);
+  flex-shrink: 0;
 
   &.standard {
     width: var(--swui-checkbox-height);
@@ -72,7 +73,10 @@
       width var(--swui-checkbox-animation-time),
       top var(--swui-checkbox-animation-time);
     border: 2px solid
-      var(--current-icon-color, var(--swui-checkbox-unchecked-icon-color));
+      var(
+        --swui-checkbox-current-icon-color,
+        var(--swui-checkbox-unchecked-icon-color)
+      );
     border-top: 0;
     border-left: 0;
     transform: rotate(var(--current-check-rotation, 20deg));
@@ -86,7 +90,7 @@
     --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
 
     &:after {
-      --current-icon-color: var(--swui-checkbox-icon-color);
+      --swui-checkbox-current-icon-color: var(--swui-checkbox-icon-color);
     }
   }
 
@@ -96,7 +100,7 @@
       --current-border-color: var(--swui-checkbox-disabled-border-color);
 
       &:after {
-        --current-icon-color: --swui-checkbox-unchecked-icon-color;
+        --swui-checkbox-current-icon-color: --swui-checkbox-unchecked-icon-color;
       }
     }
   }
@@ -107,7 +111,9 @@
       --current-border-color: var(--swui-checkbox-disabled-border-color);
 
       &:after {
-        --current-icon-color: var(--swui-checkbox-disabled-icon-color);
+        --swui-checkbox-current-icon-color: var(
+          --swui-checkbox-disabled-icon-color
+        );
       }
 
       & + label {
@@ -122,7 +128,7 @@
     --d-t-e: cubic-bezier(0.2, 0.85, 0.32, 1.2);
 
     &:after {
-      --current-icon-color: var(--swui-checkbox-icon-color);
+      --swui-checkbox-current-icon-color: var(--swui-checkbox-icon-color);
       border-right: 0;
       transform: rotate(0deg);
       width: 6px;
@@ -144,7 +150,9 @@
 
     &:disabled {
       &:after {
-        --current-icon-color: var(--swui-checkbox-disabled-icon-color);
+        --swui-checkbox-current-icon-color: var(
+          --swui-checkbox-disabled-icon-color
+        );
       }
     }
   }
